--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-navigation": "^3.3.2",
     "react-redux": "^6.0.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "udacifitness-calendar": "^11.0.0"
   },
   "devDependencies": {
+    "@expo/vector-icons": "^9.0.0",
     "babel-preset-expo": "^5.0.0"
   },
   "private": true
